--- a/views/index.ejs
+++ b/views/index.ejs
@@ -120,9 +120,11 @@
     <table id="clientes-table">
         <thead>
             <tr>
+                <th>ID</th>
                 <th>Nombre</th>
                 <th>Dirección</th>
                 <th>QUITAR</th>
+                <th>Corregir</th>
             </tr>
         </thead>
         <tbody></tbody>
