--- a/public/css/style.css
+++ b/public/css/style.css
@@ -256,6 +256,13 @@ input {
   border-radius: 5px;
   font-size: 16px;
 }
+.tablas_div{
+  height: 350px;
+  overflow: scroll;
+  border: 1px solid #c2c2c2;
+  padding: 10px;
+  margin: 1em;
+}
 
 table {
   width: 100%;
