--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,6 +31,7 @@
         <p id="fecha_actual"></p>
         <p>Folio: </p>
         <p id="folio_generar">Cargando folio...</p>
+        <div class="tablas_div">
         <table id="detalles">
             <thead>
                 <tr>
@@ -52,6 +53,7 @@
                 </tr>
             </tbody>
         </table>
+        </div>
 
         <button class=" btn btn-add" type="button" onclick="agregarFila()">Agregar Fila</button>
 
@@ -67,6 +69,7 @@
     <p id="vista-folio"></p>
     <p id="vista-cliente"></p>
     <p id="vista-domicilio"></p>
+<div class="tablas_div"> 
     <table id="vista-tabla" width="100%">
         <thead>
             <tr>
@@ -78,6 +81,7 @@
         </thead>
         <tbody></tbody>
     </table>
+</div>
     <p id="vista-total"></p>
 </div>
     </form>
@@ -87,7 +91,7 @@
 <div id="registros_seccion" class="content">
     <img class="img_index" src="./resources/img/Logo-texto.png" alt="">
     <h2>Historial de Notas</h2>
-    
+<div class="tablas_div">
     <table>
         <thead>
             <tr>
@@ -101,6 +105,7 @@
         <tbody id="tablaRegistros">
         </tbody>
     </table>
+</div>
 </div>
 
 <!-- Sección para clientes -->
@@ -117,6 +122,7 @@
     </form>
 
     <h3>Lista de Clientes</h3>
+<div class="tablas_div">
     <table id="clientes-table">
         <thead>
             <tr>
@@ -129,6 +135,7 @@
         </thead>
         <tbody></tbody>
     </table>
+</div>
 </div>
 
 
