requisición solo una hoja en pdf

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,7 @@
 <!-- Sección para crear nota -->
 <div id="crear-remision" class="content active">
     <img id="logo" src="../resources/img/logo_pdf.jpg" style="display: none;" />
+    <img id="watermark" src="../resources/img/logotipo.png" style="display: none;" alt="">
     <img class="img_index" src="./resources/img/Logo-texto.png" alt="logotipo de la empresa">
     <form id="remision-form">
         
