--- a/public/css/style.css
+++ b/public/css/style.css
@@ -203,7 +203,7 @@ footer {
 .tabs {
   display: flex;
   justify-content: space-around;
-  background: #177e89;
+  background: #000;
   padding: 10px;
   border-radius: 5px;
 }
@@ -278,7 +278,7 @@ td {
 }
 
 th {
-  background: #177e89;
+  background: #000000;
   color: white;
 }
 .btn-quit {
